# hpc-starter-template

./: CMakeLists.txt  LICENSE  README.md  run_cmake.sh  run_main_caliper.sh  spack.yaml
examples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
tests/: CMakeLists.txt
